--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Landig Page haciendo uso de lo aprendido en el curso de asincronismo en JavaScript en Platzi",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "deploy": "gh-pages -d src"
   },
   "keywords": [],
   "author": "",
@@ -13,5 +13,8 @@
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.1",
     "tailwindcss": "^3.4.17"
+  },
+  "dependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
